<resources>
	<string name="app_name">Esopos</string>
	<string name="esopos_login_header_1"><![CDATA[Sell, Buy, Manage & Connect]]></string>
	<string name="esopos_login_header_2">Login to Your Account</string>
	<string name="title_activity_login2">Sign in</string>
	<!-- Strings related to login -->
	<string name="prompt_email">Email</string>
	<string name="prompt_password">Password (optional)</string>
	<string name="action_sign_in">Sign in or register</string>
	<string name="action_sign_in_short">Sign in</string>
	<string name="error_invalid_email">This email address is invalid</string>
	<string name="error_invalid_password">This password is too short</string>
	<string name="error_incorrect_password">This password is incorrect</string>
	<string name="error_field_required">This field is required</string>
	<string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
	<string name="esopos_seller">seller</string>
	<string name="esopos_buyer">buyer</string>
	<string name="open_nav">Open nav</string>
	<string name="close_nav">Close Nav</string>
	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="your_email">Your Email</string>
	<string name="your_password">Your Password</string>
	<string name="forgot_password">Forgot Password?</string>
	<string name="login">Login</string>
	<string name="don_t_have_an_account">Don\'t Have an Account?</string>
	<string name="register">Register</string>
	<string name="esopos_logo">esopos logo</string>
	<string name="esopos_background">esopos background</string>
	<string name="cat_select">Select Store Category</string>
	<string name="view_details">View Details</string>
	<string name="latest_sales">Latest Sales</string>
	<string name="selling_offline_txt_1">We Recommend all sales to be done from the "Online POS"
        located on the "Sales Register" tab,
        for direct synchronisation with the Esopos server, but if you must sell offline ensure you
        follow this simple guide to setup your Shop for offline sales.</string>

	<string name="selling_offline_txt_2"> - To avoid loss of offline sales data ensure you synchronise your offline
        sales with the Esopos server at the end of each business dayby connecting to the internet
        and following steps outlined in this guide on tab "How to Send my Offline Sales data to the Esopos Server".</string>


	<string name="selling_offline_txt_3"> - We recommend the use of Google Chrome, Android browser, for Offline Sales.
        Other Browsers such as Firefox are also supported.</string>

	<string name="selling_offline_txt_4"> - Ensure you donot clear your browser cache if you are using Offline
        sales module to avoid loss of offline sales settings and data .</string>

	<string name="selling_offline_txt_5">If for any reason you need to clear cache on your browser,
        ensure you synchronise all offline sales to Esopos server before you carry out browser cache clearing action.</string>

	<string name="selling_offline_config_txt_1"> - The first step in setting your shop for offline sales is configuring the offline sales settings.</string>

	<string name="selling_offline_config_txt_2"> - To configure offline sales settings, go to the Navigation bar,
        click on the "Offline Sales" link, a drop down will appear, then click on "Offline Settings" link.</string>
	<string name="selling_offline_config_txt_3"> - Wait for 30 seconds while the system configure and load the offline sales settings on your device automatically.
        Ensure you wait until you see \"Offline Configuration Success\" on your screen before you proceed with other actions.</string>

	<string name="offline_sell_txt_1"> - Go to Navigation bar, click on the \"Offline Sales\" link, a drop down will appear, then click on
        \"Offline POS\". this action will load the Offline POS register.</string>

	<string name="offline_sell_txt_2"> - On the Offline POS Register enter products you want to sell,
        and click on the submit button to complete the sales transaction.</string>

	<string name="offline_sell_txt_3">Note: Your Sales are stored offline,
        and will require you to synchronise with the esopos server once you regain
        internet connections. We advice you do this everyday at the end of business day</string>

	<string name="offline_server_txt_1"> - The first step to send your offline sales data to Esopos server is to connect to a functional internet.</string>

	<string name="offline_server_txt_2"> - Go to Navigation bar, click on the \"Off-Line Sales\" link, a drop down will appear,
        then click on \"Offline Sales\". This action will load all Offline Sales transactions.</string>

	<string name="offline_server_txt_3"> - To send a transaction to Esopos server, click on the \"View\" link relating to that transaction.
        This action will load the particular sales transaction.</string>

	<string name="offline_server_txt_4"> - Next, click on the \"Submit to server\" button, this action will send the transaction
        to Esopos server and generate a receipt. which can be printed or sent to your customer via email.</string>
	<string name="timeline_note">
		NB: This CART is not saved and it\'s unique to this STORE, This transaction is solely between you and the store owner
	</string>
	<string name="service">Service</string>
	<string name="_20">20</string>
	<string name="_17">17</string>
	<string name="khan_s_store_address">Khan\'s Store Address</string>
	<string name="khan_s_store_phone_number">Khan\'s Store Phone Number</string>
	<string name="egbeda_lagos_nigeria">Egbeda, Lagos Nigeria.</string>
	<string name="change_cover_picture">Change Cover Picture</string>
	<string name="name">Name</string>
	<string name="price">Price</string>
	<string name="quantity">Quantity</string>
	<string name="actions">Actions</string>
	<string name="customer">Customer:</string>
	<string name="search_by_product_name">Search by Product Name</string>
	<string name="sub_total">Sub Total</string>
	<string name="vat">Vat</string>
	<string name="gross_total">Gross Total</string>
	<string name="submit">Submit</string>
	<string name="khan_s_store">Khan\'s Store</string>
	<string name="cover_photo">cover photo</string>
	<string name="shop_visits">Shop Visits</string>
	<string name="_11">11</string>
	<string name="products">Products</string>
	<string name="khans_store">Khan\'s Store</string>
	<string name="store_timeline">Store Timeline</string>
	<string name="dashboard">Dashboard</string>
	<string name="offline_hlp">Offline Help</string>
	<string name="offline_pos">Offline POS</string>
	<string name="online_pos">Online POS</string>
	<string name="confirm_password">Confirm Password</string>
	<string name="city">City</string>
	<string name="state">State</string>
	<string name="country">Country</string>
	<string name="address">Address</string>
	<string name="username">Username</string>
	<string name="lastname">Lastname</string>
	<string name="gender">Gender:</string>
	<string name="age">Age</string>
	<string name="firstname">Firstname</string>
	<string name="records_per_page">Records per Page</string>

	<string-array name="gender">
		<item>male</item>
		<item>female</item>
	</string-array>
	<string-array name="categories">
		<item>Phone &amp; Computer</item>
		<item>Food &amp; Groceries</item>
		<item>Beauty &amp; Health</item>
		<item>Automotive</item>
		<item>Interiors &amp; Home</item>
		<item>Books &amp; Audible</item>
		<item>Toy, Kids &amp; Baby</item>
		<item>Service</item>
		<item>Fashion</item>
		<item>Restaurant</item>
		<item>Agriculture &amp; Industrial</item>
		<item>Sport &amp; Outdoors</item>
		<item>Music, Movies &amp; Games</item>
		<item>Electronic</item>
		<item>Animals &amp; Pets</item>
		<item>Drugs(Pharmacy)</item>
	</string-array>
	<string-array name="records_per_page">
		<item>10</item>
		<item>25</item>
		<item>50</item>
		<item>100</item>
	</string-array>
	<string-array name="customers">
		<item>Fred</item>
		<item>Xheghun</item>
		<item>David</item>
		<item>Joba</item>
	</string-array>
</resources>
