<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<androidx.core.widget.NestedScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<ImageView
				android:id="@+id/cover_img"
				android:layout_width="match_parent"
				android:layout_height="200dp"
				android:contentDescription="@string/cover_photo"
				android:scaleType="centerCrop"
				android:src="@drawable/post" />

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="150dp"
				android:background="@color/colorBlackTrans"
				android:fontFamily="@font/open_sans_bold"
				android:padding="10dp"
				android:text="@string/khan_s_store"
				android:textColor="#fff"
				android:textSize="18sp" />

			<com.google.android.material.card.MaterialCardView
				android:id="@+id/details"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@id/cover_img">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"

					android:paddingStart="16dp"
					android:paddingTop="10dp"
					android:paddingEnd="16dp">

					<TextView
						style="@style/text1"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:drawableStart="@drawable/ic_location_on"
						android:text="@string/khan_s_store_address" />

					<TextView
						style="@style/text1"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:drawableStart="@drawable/ic_contact_phone"
						android:text="@string/khan_s_store_phone_number" />

					<TextView
						style="@style/text1"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:drawableStart="@drawable/ic_worldwide_location"
						android:text="@string/egbeda_lagos_nigeria" />

					<com.google.android.material.button.MaterialButton
						style="@style/profile_btn"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_margin="4dp"
						android:text="@string/change_cover_picture"
						app:cornerRadius="0dp" />

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="1dp"
						android:background="@color/colorGrey" />

					<androidx.constraintlayout.widget.ConstraintLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginTop="8dp"
						android:padding="5dp">

						<LinearLayout
							android:id="@+id/linearLayout2"
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_marginStart="8dp"
							android:gravity="center"
							android:orientation="vertical"
							app:layout_constraintBottom_toBottomOf="parent"
							app:layout_constraintStart_toStartOf="parent"
							app:layout_constraintTop_toTopOf="parent">

							<TextView
								style="@style/text_2"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:padding="4dp"
								android:text="@string/shop_visits" />

							<TextView
								style="@style/text1"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:gravity="center"
								android:padding="4dp"
								android:text="@string/_11" />
						</LinearLayout>

						<LinearLayout
							android:id="@+id/linearLayout4"
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_marginEnd="8dp"
							android:gravity="center"
							android:orientation="vertical"
							app:layout_constraintBottom_toBottomOf="parent"
							app:layout_constraintEnd_toStartOf="@+id/linearLayout3"
							app:layout_constraintStart_toEndOf="@+id/linearLayout2"
							app:layout_constraintTop_toTopOf="parent">

							<TextView
								style="@style/text_2"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:padding="4dp"
								android:text="@string/products" />

							<TextView
								style="@style/text1"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:gravity="center"
								android:padding="4dp"
								android:text="@string/_20" />
						</LinearLayout>

						<LinearLayout
							android:id="@+id/linearLayout3"
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:gravity="center"
							android:orientation="vertical"
							app:layout_constraintBottom_toBottomOf="parent"
							app:layout_constraintEnd_toEndOf="parent"
							app:layout_constraintTop_toTopOf="parent">

							<TextView
								style="@style/text_2"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:padding="4dp"
								android:text="@string/service" />

							<TextView
								style="@style/text1"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:gravity="center"
								android:padding="4dp"
								android:text="@string/_17" />
						</LinearLayout>
					</androidx.constraintlayout.widget.ConstraintLayout>

				</LinearLayout>
			</com.google.android.material.card.MaterialCardView>

			<com.google.android.material.card.MaterialCardView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@id/details"
				android:layout_marginTop="8dp">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:padding="14dp">

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:orientation="horizontal">

						<EditText
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_marginEnd="5dp"
							android:layout_weight="4"
							android:background="@drawable/curved_rect_outlined"
							android:hint="@string/search_by_product_name"
							android:inputType="text"
							android:padding="10dp" />

						<com.google.android.material.button.MaterialButton
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_weight="1"
							app:icon="@drawable/ic_search_24dp"
							app:iconGravity="textStart" />
					</LinearLayout>


					<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:padding="5dp"
						android:text="@string/customer" />

					<Spinner
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:entries="@array/customers"
						android:padding="6dp" />

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_margin="8dp"
						android:orientation="horizontal">

						<TextView
							style="@style/pink_table_heading"
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_weight="1"
							android:text="@string/name" />

						<TextView
							style="@style/pink_table_heading"
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_weight="1"
							android:text="@string/price" />

						<TextView
							style="@style/pink_table_heading"
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_weight="1"
							android:text="@string/quantity" />

						<TextView
							style="@style/pink_table_heading"
							android:layout_width="0dp"
							android:layout_height="wrap_content"
							android:layout_weight="1"
							android:text="@string/actions" />
					</LinearLayout>

					<com.google.android.material.textfield.TextInputLayout
						style="@style/outlined_edit_text"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:hint="@string/sub_total">
						<com.google.android.material.textfield.TextInputEditText
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:inputType="text"/>
					</com.google.android.material.textfield.TextInputLayout>


					<com.google.android.material.textfield.TextInputLayout
						style="@style/outlined_edit_text"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:hint="@string/vat">
						<com.google.android.material.textfield.TextInputEditText
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:inputType="text" />
					</com.google.android.material.textfield.TextInputLayout>
					<com.google.android.material.textfield.TextInputLayout
						style="@style/outlined_edit_text"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:hint="@string/gross_total">
						<com.google.android.material.textfield.TextInputEditText
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:inputType="text" />
					</com.google.android.material.textfield.TextInputLayout>

					<LinearLayout
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_gravity="end"
						android:orientation="horizontal">

						<TextView
							android:id="@+id/timeline_info"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginTop="5dp"
							android:layout_marginEnd="10dp"
							android:background="?android:attr/selectableItemBackground"
							android:clickable="true"
							android:drawableStart="@drawable/ic_info_outline"
							android:focusable="true"
							android:padding="10dp" />

						<com.google.android.material.button.MaterialButton
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_margin="8dp"
							android:text="@string/submit" />
					</LinearLayout>
				</LinearLayout>
			</com.google.android.material.card.MaterialCardView>


		</RelativeLayout>


	</androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>