<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.OfflineHelpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/selling_offline"
            style="@style/collapsible_layout_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Selling Offline With Esopos"/>
            <LinearLayout
                style="@style/collapsible_layout_content"
                android:id="@+id/selling_offline_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:gravity="start"
                    android:text="@string/selling_offline_txt_1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:gravity="start"
                    android:text="@string/selling_offline_txt_2"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:gravity="start"
                    android:text="@string/selling_offline_txt_3"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:gravity="start"
                    android:text="@string/selling_offline_txt_4"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:gravity="start"
                    android:text="@string/selling_offline_txt_5"/>
            </LinearLayout>

        <TextView
            android:id="@+id/offline_config"
            style="@style/collapsible_layout_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="How To Configure Your Shop For Offline Sales"/>
           <LinearLayout
               android:id="@+id/offline_config_content"
               style="@style/collapsible_layout_content"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical">
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:padding="5dp"
                   android:gravity="start"
                   android:text="@string/selling_offline_config_txt_1"/>
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:padding="5dp"
                   android:gravity="start"
                   android:text="@string/selling_offline_config_txt_2"/>
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:padding="5dp"
                   android:gravity="start"
                   android:text="@string/selling_offline_config_txt_3"/>
           </LinearLayout>

        <TextView
            android:id="@+id/offline_sell"
            style="@style/collapsible_layout_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="How To Sell Offline"/>

            <LinearLayout
                android:id="@+id/offline_sell_content"
                style="@style/collapsible_layout_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:gravity="start"
                    android:text="@string/offline_sell_txt_1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:gravity="start"
                    android:text="@string/offline_sell_txt_2"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:gravity="start"
                    android:text="@string/offline_sell_txt_3"/>
            </LinearLayout>

        <TextView
            android:id="@+id/offline_server"
            style="@style/collapsible_layout_heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="How To Send Your Offline Sales Data To The Esopos Server"/>

            <LinearLayout
                android:id="@+id/offline_server_content"
                style="@style/collapsible_layout_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:gravity="start"
                    android:text="@string/offline_server_txt_1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:gravity="start"
                    android:text="@string/offline_server_txt_2"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:gravity="start"
                    android:text="@string/offline_server_txt_3"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:gravity="start"
                    android:text="@string/offline_server_txt_4"/>
            </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>